fix image on mobile device to center

--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -415,6 +415,10 @@ footer .year {
 		height: 3px;
 		transform: rotate(45deg) translate(-5px, -6px);
 	}
+	.gallery {
+		justify-content: center;
+		align-items: center;
+	}
 } 
 
 
